--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Student Loan Calculator | Plan Your Financial Future</title>
+    <meta property="og:title" content="Student Loan Calculator | Plan Your Financial Future" />
+    <meta property="og:description" content="Use our free student loan calculator to estimate payments, compare repayment strategies, and plan your financial future. Trusted by students and graduates." />
+    <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" />
+    <meta property="og:url" content="https://student-loan-calculator.com" />
+    <meta name="twitter:card" content="summary_large_image" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
