--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Use our free student loan calculator to estimate payments, compare repayment strategies, and plan your financial future. Trusted by students and graduates."
     />
+    <meta name="robots" content="index, follow">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -30,6 +31,7 @@
     <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" />
     <meta property="og:url" content="https://student-loan-calculator.com" />
     <meta name="twitter:card" content="summary_large_image" />
+    <link rel="canonical" href="https://student-loan-calculator.com{{ current_page_path }}" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
